<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="action_settings">Settings</string>
    <string name="settings_icon">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">Advanced search options</string>
    <string name="settings_image_size">Image Size</string>
    <string name="settings_color_filter">Color Filter</string>
    <string name="settings_image_type">Image Type</string>
    <string name="settings_site">Site Filter</string>
    <string name="settings_none">None</string>
    <string name="settings_all">All</string>
    <string name="search_again">Search</string>
    <string name="email_icon">Email</string>

</resources>
