<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yahoo.ddosch.gridimagesearch.activities.SettingsActivity" >

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSettingsTitle"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_marginTop="16dp"
        android:text="@string/settings_image_size" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_alignRight="@+id/tvImageSize"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="16dp"
        android:text="@string/settings_color_filter" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/tvColorFilter"
        android:layout_marginTop="16dp"
        android:text="@string/settings_image_type" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageType"
        android:layout_alignRight="@+id/tvImageType"
        android:layout_below="@+id/tvImageType"
        android:layout_marginTop="16dp"
        android:text="@string/settings_site" />

    <EditText
        android:id="@+id/etImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvImageType"
        android:layout_alignBottom="@+id/tvImageType"
        android:layout_toRightOf="@+id/tvImageType"
        android:ems="10"
        android:hint="@string/settings_all" />

    <EditText
        android:id="@+id/etColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvColorFilter"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_toRightOf="@+id/tvImageType"
        android:ems="10"
        android:hint="@string/settings_none" />

    <EditText
        android:id="@+id/etImageSz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvImageSize"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignLeft="@+id/etColorFilter"
        android:ems="10"
        android:hint="@string/settings_none" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSiteFilter"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignLeft="@+id/etImageType"
        android:ems="10"
        android:hint="@string/settings_none" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onSave"
        android:text="@string/search_again" />

</RelativeLayout>
